# ProjectEMMETT

./: .gitignore  CMakeLists.txt  README.md  file.txt
include/: emmett.h
include/unitTests/: unitTests.h
src/: 6502.cpp  ADC.cpp  AND.cpp  ASL.cpp  BIT.cpp  BRANCH.cpp  BRK.cpp  CMP.cpp  CPX.cpp  CPY.cpp  DEC.cpp  EEPROM.cpp  EOR.cpp  INC.cpp  JMP.cpp  LDA.cpp  LDX.cpp  LDY.cpp  LSR.cpp  NOP.cpp  ORA.cpp  OwnOpcodes.cpp  PUSHPULL.cpp  ROL.cpp  ROR.cpp  SBC.cpp  SET_CLEAR_FLAGS.cpp  STA.cpp  STX.cpp  STY.cpp  TRANSFER.cpp  adressingModes-adressLocation.cpp  adressingModes.cpp  main.cpp  register.cpp
src/noUnitTests/: noUnitTests.cpp
src/unitTests/: testADC.cpp  testALS.cpp  testAND.cpp  testASL.cpp  testBIT.cpp  testBRANCH.cpp  testBRK.cpp  testCMP.cpp  testCPX.cpp  testCPY.cpp  testDEC.cpp  testEOR.cpp  testINC.cpp  testJMP.cpp  testLDA.cpp  testLDX.cpp  testLDY.cpp  testLSR.cpp  testNOP.cpp  testORA.cpp  testPUSHPULL.cpp  testROL.cpp  testROR.cpp  testSBC.cpp  testSET_CLEAR_FLAGS.cpp  testSTA.cpp  testSTX.cpp  testSTY.cpp  testTRANSFER.cpp  unitTests.cpp
